--- a/style.css
+++ b/style.css
@@ -62,3 +62,7 @@ text-align: center;
         -moz-box-shadow: -2px 6px 6px 3px rgba(0,0,0,0.75);
         box-shadow: -2px 6px 6px 3px rgba(0,0,0,0.75);
       }
+.bannersatu{
+	padding:5px;
+	margin-top: 70px;	
+}
